fix overflow for wizard trust signals

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -3981,6 +3981,9 @@ form[name='compose'] {
     }
 
     .dev-list {
+        overflow: auto;
+        overflow-x: hidden;
+
         .testimonial {
             text-align: left;
 
@@ -4040,7 +4043,7 @@ form[name='compose'] {
 
             li {
                 display: block;
-                width: 34%;
+                width: 33.33%;
                 padding: 0 10px;
 
                 a {
